[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentforge"
version = "0.1.0"
description = "A self-routing multi-agent AI team: CEO, Architect, Engineer, Designer, QA, Security, Docs & Release"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
agentforge = "agentforge.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/agentforge"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentforge*"]
